Expand (a bit) on lifetimes. Add gitignore.

--- a/drafts/Lifetimes.ipynb
+++ b/drafts/Lifetimes.ipynb
@@ -127,8 +127,176 @@
     "\n",
     "Videos:\n",
     "\n",
-    "- https://www.youtube.com/watch?v=rAl-9HwD858\n",
-    "- "
+    "- [YouTube tutorial 1](https://www.youtube.com/watch?v=rAl-9HwD858)\n",
+    "- [YouTube tutorial 2](https://www.youtube.com/watch?v=MSi3E5Z8oRw&list=WL&index=17)\n",
+    "\n",
+    "Blogs, Github, others:\n",
+    "\n",
+    "- [Pretzelhammer - Common Rust lifetime misconceptions](https://github.com/pretzelhammer/rust-blog/blob/master/posts/common-rust-lifetime-misconceptions.md)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More examples:\n",
+    "\n",
+    "1. Iterate over a collection of `T` and give out mutable references to items. Basically an `iter_mut`.\n",
+    "\n",
+    "(Also an example of E0495)\n",
+    "Aside: There's an interesting question here. Why does the `&mut` case complain when the `&` case compiles just fine? Think of this and google it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Since struct is holding a ref, we *need* to specify how long that will live.\n",
+    "// Read as: IterWrapper lives *as long as* reference it contains lives. This *does* mean that\n",
+    "// `slice` can live longer, though. IterWrapper *can't*.\n",
+    "struct IterWrapper<'a, T> {\n",
+    "    slice: &'a [T],\n",
+    "}\n",
+    "\n",
+    "// Associated item \"Item\" must be tied to our IterWrapper. In essense, we still need\n",
+    "// to explicitly state that item returned from next (which is a reference into our slice) \n",
+    "// lives as long as the `slice` we we've wrapped.\n",
+    "impl<'a, T> Iterator for IterWrapper<'a, T>{\n",
+    "    type Item = &'a T;\n",
+    "    \n",
+    "    fn next(&mut self) -> Option<Self::Item> {\n",
+    "        if self.slice.is_empty() {\n",
+    "            return None;\n",
+    "        }\n",
+    "        // Grab element, trim slice.\n",
+    "        let element = self.slice.get(0);\n",
+    "        self.slice = &self.slice[1..];\n",
+    "        element\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "fn test_iterwrapper(){\n",
+    "    let v = vec![1, 2, 3, 4];\n",
+    "    let iw = IterWrapper { slice: &v[..] };\n",
+    "    \n",
+    "    for value in iw {\n",
+    "         println!(\"{}\", value);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "test_iterwrapper()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The struct for which we will implement `Iterator`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct MutIterWrapper<'a, T> {\n",
+    "    slice: &'a mut [T],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First stab at implementing `Iterator` for MutIterWrapper:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impl<'a, T> Iterator for MutIterWrapper<'a, T>{\n",
+    "    type Item = &'a mut T;\n",
+    "    \n",
+    "    fn next(&mut self) -> Option<Self::Item> {\n",
+    "        let result = self.slice.get_mut(0);\n",
+    "        self.slice = &mut self.slice[1..];\n",
+    "        result\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::mem;\n",
+    "\n",
+    "impl<'a, T> Iterator for MutIterWrapper<'a, T>{\n",
+    "    type Item = &'a mut T;\n",
+    "    \n",
+    "    fn next(&mut self) -> Option<Self::Item> {\n",
+    "        // Replace self.slice with something else (empty slice)\n",
+    "        // while we work on its copy.\n",
+    "        let slice = mem::replace(&mut self.slice, &mut []);\n",
+    "        // then we replace self.slice with slice from which\n",
+    "        // we took our result\n",
+    "        let (result, rest) = slice.split_first_mut()?;\n",
+    "        self.slice = rest;\n",
+    "        Some(result)\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn test_mutiterwrapper(){\n",
+    "    let mut v = vec![1, 2, 3, 4];\n",
+    "    {\n",
+    "        let iw = MutIterWrapper { slice: &mut v[..] };\n",
+    "    \n",
+    "        for value in iw {\n",
+    "             *value = *value + 1;\n",
+    "        }\n",
+    "    }\n",
+    "    for value in v {\n",
+    "        println!(\"{}\", value);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "test_mutiterwrapper()"
    ]
   },
   {
