Add to lifetimes.

--- a/drafts/Lifetimes.ipynb
+++ b/drafts/Lifetimes.ipynb
@@ -6,38 +6,108 @@
    "source": [
     "## Lifetimes\n",
     "\n",
-    "- Lifetimes enforce that a piece of memory for a given reference is still valid.\n",
-    "- Lifetime for a given value (references only?) ends when value is moved or dropped. (So, not necessarily tied to scope.)\n",
-    "- Two references (e.g &x and &y) given a similar lifetime ('a) essentially denote that memory for both is still valid for a given\n",
-    "  area of our code (denoted by 'a). \n",
-    "  \n",
-    "  "
+    "Some coarse initial points:\n",
+    "\n",
+    "- Lifetimes enforce that a piece of memory for a given reference is still valid *in its current memory location*. Moves should really play no part in lifetimes since a) when performed for references, they do not change the memory location of what they refer to and b) when performed for non-references (proper name for this?) lifetimes really don't apply."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lifetime for a given value (references only?) ends when value is moved (see previous: memory location has changed) or dropped. Examples of both: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn moved_b(){\n",
-    "    let a;\n",
-    "    {\n",
-    "        let b = String::from(\"Hello\");\n",
-    "        // Because &T is Copy, assignment of b to a doesn't move\n",
-    "        // contents of b as the following assignment would:\n",
-    "        //\n",
-    "        // a = b\n",
-    "        //\n",
-    "        // Instead, we get, as the name implies, a reference to whatever b\n",
-    "        // is pointing to.\n",
-    "        a = &b\n",
-    "    } // b's memory is dropped here (end of scope). \n",
-    "    // So, reference to it would be left dangling.\n",
-    "    // println!(\"{}\", a);\n",
+    "/// As an example of moving. After the move, all references, as expected, must be invalidated:\n",
+    "fn i_own_this(a: String) {\n",
+    "    println!(\"Owned {}\", a);\n",
     "}\n",
     "\n",
-    "moved_b()"
+    "fn end_when_moved() {\n",
+    "    let s = String::from(\"String\");\n",
+    "    let ref_s = &s;\n",
+    "    \n",
+    "    println!(\"{}\", ref_s);\n",
+    "    i_own_this(s);\n",
+    "    // println!(\"{}\", ref_s)  // lifetime has ended.\n",
+    "}\n",
+    "\n",
+    "fn end_when_dropped() {\n",
+    "    let ref_s: &String;\n",
+    "    {\n",
+    "        // Will get dropped at }\n",
+    "        let s = String::from(\"String\");\n",
+    "        ref_s = &s;\n",
+    "        println!(\"{}\", ref_s);\n",
+    "    }\n",
+    "    // Borrowed value does not life\n",
+    "    // println!(\"{}\", ref_s);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generic lifetimes\n",
+    "\n",
+    "Two references (e.g `&x` and `&y`) given a similar generic lifetime (say the common `'a`) essentially denote that memory for both is still valid for a given area of our code (which is whatever the `'a` is). \n",
+    "\n",
+    "A bit more clearly, a lifetime `'a` is a generic lifetime parameter that can be specialized with a specific scope at compile time, based on the call site. (See [here](https://stackoverflow.com/a/31612025/4952130) for that.) In essense, generic lifetime specifiers, like generic types, allow us to re-use code containing references for many different instantiations of lifetimes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "/// The oh-so familiar example:\n",
+    "fn generic_lifetime<'a>(ref1: &'a String, ref2: &'a String) -> &'a String {\n",
+    "    if ref1.len() > ref2.len() {\n",
+    "        return ref1;\n",
+    "    }\n",
+    "    ref2\n",
+    "}\n",
+    "\n",
+    "/// Different instantiations of generic lifetime:\n",
+    "fn run(){\n",
+    "    let (value1, value2) = (String::from(\"value_1\"), String::from(\"value_2\"));\n",
+    "    // Lifetime for these references starts now.\n",
+    "    let (ref1, ref2) = (&value1, &value2);\n",
+    "    // First instantiation. Lifetime 'a will be instantiated with lifetime set for\n",
+    "    // ref1, ref2. result (since it refers to one of the two strings), gets the same\n",
+    "    // lifetime.\n",
+    "    let result = generic_lifetime(ref1, ref2);\n",
+    "    {\n",
+    "        // New scope. At end of scope, values get dropped => lifetimes end.\n",
+    "        let (svalue1, svalue2) = (String::from(\"svalue_1\"), String::from(\"svalue_2\"));\n",
+    "        // Lifetime for references starts now.\n",
+    "        let (sref1, sref2) = (&svalue1, &svalue2);\n",
+    "\n",
+    "        // Can re-use same function since lifetime is generic.\n",
+    "        // Second instantiation. Lifetime 'a will be instantiated with lifetime set for\n",
+    "        // sref1, sref2. sresult (since it refers to one of the two strings), gets the same\n",
+    "        // lifetime.\n",
+    "        let sresult = generic_lifetime(sref1, sref2);\n",
+    "        \n",
+    "        // lifetime for sref1, sref2, sresult, ends here.\n",
+    "        println!(\"Result: {}\", sresult);    \n",
+    "    }\n",
+    "    \n",
+    "    // lifetime for ref1, ref2, result, ends here.\n",
+    "    println!(\"Result: {}\", result);\n",
+    "}\n",
+    "\n",
+    "run()"
    ]
   },
   {
@@ -76,24 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "lifetime mismatch",
-     "output_type": "error",
-     "traceback": [
-      "fn condition_ref_return<'a, 'b>(a: &'a i32, b: &'b i32) -> &'a i32 {",
-      "\u001b[91m                                               ^^^^^^^\u001b[0m \u001b[94mthis parameter and the return type are declared with different lifetimes...\u001b[0m",
-      "fn condition_ref_return<'a, 'b>(a: &'a i32, b: &'b i32) -> &'a i32 {",
-      "\u001b[91m                                                           ^^^^^^^\u001b[0m \u001b[94m\u001b[0m",
-      "        b",
-      "\u001b[91m        ^\u001b[0m \u001b[94m...but data from `b` is returned here\u001b[0m",
-      "lifetime mismatch"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "/// Conditionally return ref.\n",
     "/// One possible solution: subtyping for lifetimes, i.e place a bound on\n",
@@ -130,9 +185,13 @@
     "- [YouTube tutorial 1](https://www.youtube.com/watch?v=rAl-9HwD858)\n",
     "- [YouTube tutorial 2](https://www.youtube.com/watch?v=MSi3E5Z8oRw&list=WL&index=17)\n",
     "\n",
-    "Blogs, Github, others:\n",
+    "Blogs, Github, StackOverflow:\n",
     "\n",
-    "- [Pretzelhammer - Common Rust lifetime misconceptions](https://github.com/pretzelhammer/rust-blog/blob/master/posts/common-rust-lifetime-misconceptions.md)"
+    "- [Pretzelhammer - Common Rust lifetime misconceptions](https://github.com/pretzelhammer/rust-blog/blob/master/posts/common-rust-lifetime-misconceptions.md)\n",
+    "- [SO 1](https://stackoverflow.com/questions/25730586/how-can-i-create-my-own-data-structure-with-an-iterator-that-returns-mutable-ref)\n",
+    "- [Generally StackOverflow [rust][lifetime] questions](https://stackoverflow.com/questions/tagged/lifetime+rust)\n",
+    "- Iterators yielding mutable references [part one](http://smallcultfollowing.com/babysteps/blog/2013/10/24/iterators-yielding-mutable-references/) and [two](http://smallcultfollowing.com/babysteps/blog/2013/10/24/iterators-yielding-mutable-references-take-2/)\n",
+    "- [Rust borrow and lifetimes (2015)](http://arthurtw.github.io/2014/11/30/rust-borrow-lifetimes.html)."
    ]
   },
   {
